<resources>
    <string name="app_name">thirsty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">thirsty</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_visited">Visited</string>
    <string name="menu_contributed">Contributed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_rate">Rate The App</string>
    <string name="title_activity_maps">Map</string>

    <!-- Login Page -->
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="btn_google_login">continue with google</string>


    <string name="api_key">AIzaSyAjo-XEvFEE6PBQRByCYhu9yz5jEf1cv2Q</string>

    <string name="marker_id_key">marker_id_key</string>
    <string name="latitude_key">latitude_key</string>
    <string name="longitude_key">longitude_key</string>


    <string-array name="options_array">
        <item>Bottle Refill</item>
        <item>Dog Bowl</item>

    </string-array>

    <string-array name="map_type_array">
        <item>Default</item>
        <item>Satelite</item>
    </string-array>


    <string name="image_extension">.jpg</string>

    <string name="contributed_message">When you contribute a new location it will show up here.</string>
    <string name="starred_message">When you star a location it will show up here.</string>
    <string name="profile_message">Sign In to join the thirsty community. It\'s super easy.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
