<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".LoginMasterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="134dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="264dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="134dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="confirm password" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_master_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/login_buttons_margin"
        android:background="@drawable/btn_login_bg"
        android:text="Login"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_master_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/login_buttons_margin"
        android:background="@drawable/btn_login_bg"
        android:text="Create an Account"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_registration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/login_buttons_margin"

        android:text="confirm registration"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/login_buttons_margin"
            android:layout_marginEnd="@dimen/login_buttons_margin"
            android:layout_marginBottom="20dp"
            app:iconTintMode="add"
            app:iconTint="@android:color/transparent"
            app:icon="@drawable/ic_google_login"
            android:paddingRight="60dp"
            app:iconSize="30dp"
            android:text="@string/btn_google_login"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="50dp" />
    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>